--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ALURAFLIX
+<header>ALURAFLIX</header>
 
-ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?
+<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 #homem-aranha
